[gd_scene load_steps=5 format=3 uid="uid://cjbbh70tqcixo"]

[ext_resource type="Script" path="res://Scenes/Combat/Gui/DiffInputHandler/diff_input_handler.gd" id="1_jvf0y"]
[ext_resource type="PackedScene" uid="uid://cicfi87uvmp1s" path="res://Scenes/Combat/Gui/DiffInputHandler/rotate_joy.tscn" id="2_dwdon"]
[ext_resource type="PackedScene" uid="uid://cuoo06hlpsfru" path="res://Scenes/Combat/Gui/DiffInputHandler/move_joy.tscn" id="3_d632d"]
[ext_resource type="PackedScene" uid="uid://3hfelgqskdmx" path="res://Scenes/Combat/Gui/DiffInputHandler/null_joy.tscn" id="4_ul6ox"]

[node name="DiffInputHandler" type="Node2D"]
script = ExtResource("1_jvf0y")

[node name="RotateJoy" parent="." instance=ExtResource("2_dwdon")]

[node name="MoveJoy" parent="." instance=ExtResource("3_d632d")]

[node name="NullJoy" parent="." instance=ExtResource("4_ul6ox")]
